fix(table): prevent margin collapse in grouped

--- a/modules/styles/directives/table/ios.less
+++ b/modules/styles/directives/table/ios.less
@@ -1,6 +1,7 @@
 @import 'ios/theme';
 
 .bp-ios-table(@prefix) {
+  overflow: hidden;
   &.@{prefix}-grouped {
     background-color: @ios-table-grouped-background;
     @{prefix} {
